--- a/vanilla/7-questions/setup/styles.css
+++ b/vanilla/7-questions/setup/styles.css
@@ -221,7 +221,7 @@ Questions
   transition: var(--transition);
 }
 .question-btn:hover {
-  transform: rotate(90deg);
+  transform: rotate(180deg);
 }
 .question-text {
   padding: 1rem 0 1.5rem 0;
@@ -231,7 +231,7 @@ Questions
   margin-bottom: 0;
 }
 /* hide text */
-/* .question-text {
+.question-text {
   display: none;
 }
 .show-text .question-text {
@@ -245,4 +245,4 @@ Questions
 }
 .show-text .plus-icon {
   display: none;
-} */
+}
