--- a/bus.css
+++ b/bus.css
@@ -43,22 +43,93 @@ body{
     color: white;
 }
 .content{
-    height: 90vh;
 }
 .sidebar{
-    width: 20vw;
+    position: fixed;
+    left: 0;
+    width: 23vw;
     height: 100%;
-    background-color: white;
-    box-shadow: 0 10px 10px black;
-    float: left;
+    background: white;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    row-gap: 1rem;
+    box-shadow: 5px 4px 5px black;
+    transform: translate(-100%);
+    transition: all .4s ease-in;
 }
+.show-sidebar{
+    transform: translate(0%);
+    transition: all .4s ease-in;
+}
+.cross{
+    margin-left: auto;
+    background-color: white;
+    color: blue;
+    height: 30px;
+    width: 20px;
+}
+li{
+    display: flex;
+}
+ul{
+    list-style-type: none;
+}
+.links a {
+    display: block;
+    font-size: 1.5rem;
+    padding: 1rem 1.5rem;
+    color: gray;
+    width: 25px;
+}
+.links a:hover {
+    background: rgba(255, 255, 255, 0.137);
+    color: rgb(0, 0, 255);
+    padding-left: 1.75rem;
+
+ }
+ .visit{
+     display: inline;
+     padding-top: .9rem;
+     font-size: large;
+     text-transform: capitalize;
+     font-style: italic;
+ }
 .main{
-    padding-left: 21.5vw;
+    padding-left: 1.5vw;
     padding-top: 1.5vw;
     display: none;
+    transition: all .4s linear;
+    font-size: 3vh;
 }
 .main-show{
-    display: block
+    display: block;
+}
+.pad{
+    padding-left: 24.5vw;
+    transition: all .4s linear;
+}
+.create-new{
+    height: 2rem;
+    color: black;
+    background-color: white;
+}
+.n{
+    padding-top: 2vh;
+}
+label{
+    display: inline-block;
+    width: 25vw;
+    vertical-align: top;
+}
+.final{
+    height: 2rem;
+    width: 50vw;
+    font-size: 3vh;
+}
+@media only screen and (max-width: 1000px){
+    .visit{
+        display: none;
+    }
 }
 @media only screen and (max-width: 600px){
     .sidebar{
@@ -69,6 +140,9 @@ body{
         transition: all .5s linear;
     }
     .logo{
+        display: none;
+    }
+    .menu{
         display: none;
     }
 }
