--- a/bus.css
+++ b/bus.css
@@ -122,9 +122,9 @@ label{
     vertical-align: top;
 }
 .final{
-    height: 2rem;
+    height: 2.3vw;
     width: 50vw;
-    font-size: 3vh;
+    font-size: 2vw;
 }
 @media only screen and (max-width: 1000px){
     .visit{
