--- a/bus.css
+++ b/bus.css
@@ -99,7 +99,7 @@ ul{
     padding-top: 1.5vw;
     display: none;
     transition: all .4s linear;
-    font-size: 2vw;
+    font-size: 1vw;
 }
 .main-show{
     display: block;
@@ -114,7 +114,7 @@ ul{
     background-color: white;
 }
 .n{
-    padding-top: 2vh;
+    padding-top: .5vw;
 }
 label{
     display: inline-block;
