--- a/index.css
+++ b/index.css
@@ -190,6 +190,31 @@ Questions
   font-family: "Great Vibes", cursive;
   text-align: center;
 }
+.btn-container {
+  margin-bottom: 4rem;
+  display: flex;
+  overflow-y: auto;
+  overflow-x: scroll;
+  justify-content: center;
+  width: 100%;
+}
+.filter-btn {
+  background: transparent;
+  border-color: var(--clr-gold);
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  border-radius: var(--radius);
+  padding: 0.375rem 0.75rem;
+  color: var(--clr-gold);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.filter-btn:hover {
+  background: var(--clr-gold);
+  color: var(--clr-white);
+}
 .section-center {
   max-width: var(--fixed-width);
 }
